--- a/index.css
+++ b/index.css
@@ -3,3 +3,10 @@
     padding: 0px;
     box-sizing: border-box;
 }
+#mainArrayInput {
+    min-width: 100px;
+    border-radius: 20px;
+    box-shadow: 0px 2px 2px 2px rgba(245, 245, 220, 0.523);
+    margin-right: 20px;
+    padding-left: 20%;
+}
