--- a/index.css
+++ b/index.css
@@ -10,3 +10,19 @@
     margin-right: 20px;
     padding-left: 20%;
 }
+#randomArrInput  , #maxRandomInput{
+    min-width: 100px;
+    border-radius: 20px;
+    box-shadow: 0px 2px 2px 2px rgba(245, 245, 220, 0.523);
+    margin-right: 20px;
+    padding-left: 20px;
+}
+.col-3 {
+    background-color: beige;
+    border-radius: 20px;
+    padding: 20px 10px;
+}
+.col-9 {
+    background-color: aliceblue;
+    border-radius: 30px;
+}
